blocks/marquee/marquee.css
main > .section-outer > .section.marquee-container {
    max-width: 100%;
    padding: 0;
    margin: 0;
}

.marquee-container .marquee-wrapper {
    max-width: unset;
    padding: 0;
}

.marquee {
    position: relative;

    --mq-height-s-dt: 470px;
    --mq-height-s-mob: 500px;
    --mq-height-m: 550px;
    --mq-height-l: 700px;
}

.marquee, 
.marquee p {
    color: white;
}

.marquee.dark-text, 
.marquee.dark-text p {
    color: black;
}

/* background */
.marquee .background {
    position: absolute;
    z-index: -1;
    height: 100%;
    width: 100%;
    background: var(--ca-tangerine-400);
}

.marquee .background picture {
    height: 100%;
}

.marquee .background > div,
.marquee .background > div p { 
    margin: 0;
    height: 100%; 
}

.marquee .background img,
.marquee .background video {
    object-fit: cover;
    width: 100%;
    height: 100%;
}

/* foreground */
.marquee .foreground {
    padding: 0;
    display: flex;
    min-height: var(--mq-height-s-mob);
}

.marquee.vertical-center .foreground {  align-items: center; }

.marquee.height-auto  .foreground {  min-height: unset; }

.marquee .foreground > div { padding: 2em 1em; }

.marquee .heading { display: inline; }

.marquee p.intro {
    color: black;
    margin-bottom: 1rem;
    position: relative;
}

.marquee p.intro span {
    background-color: var(--very-light-gray);
    display: inline-block;
    font-family: var(--body-font-family);
    font-size: 16px;
    font-weight: 600;
    letter-spacing: .3px;
    padding: .5rem .5rem .25rem;
}

.marquee p.intro .border {
    height: 2px;
    background: var(--very-light-gray);
    position: absolute;
    bottom: 0;
    width: 100%;
}

.marquee .action-area {
    display: flex;
    flex-wrap: wrap;
    gap: .5rem;
    margin-top: 1rem;
}

.marquee .supplemental-text {
    font-family: var(--ff-acceptance-extra-bold);
}

.marquee.max-width-50 .foreground > div {
    max-width: 50%;
    width: 50%
}

.marquee.max-width-75 .foreground > div {
    max-width: 75%;
    width: 75%
}

.marquee.max-width-90 .foreground > div {
    max-width: 90%;
    width: 90%
}

.marquee.max-width-100 .foreground > div {
    max-width: 100%;
    width: 100%
}

.marquee .buttons-container {
    justify-content: flex-start;
}

/* mobile-only */
@media screen and (width < 960px) {
  .marquee h1 {
    line-height: 42px;
  }
}

@media screen and (width >= 576px) {
    .marquee .foreground { 
        min-height: var(--mq-height-s-dt);
    }

    .marquee .foreground > div {
        padding: 2em 0;
    }
}

@media screen and (width >= 960px) {
    .marquee .foreground { 
        align-items: center;
    }

    .marquee .foreground > div,
    .marquee.max-width-50-desktop .foreground > div {
        max-width: 50%;
    }

    .marquee.max-width-75-desktop .foreground > div {
        max-width: 75%;
    }
    
    .marquee.max-width-90-desktop .foreground > div {
        max-width: 90%;
    }
    
    .marquee.max-width-100-desktop .foreground > div {
        max-width: 100%;
    }


    .marquee.height-medium .foreground { min-height: var(--mq-height-m); }

    .marquee.height-large .foreground { min-height: var(--mq-height-l); }

    .marquee .action-area {
        gap: 1rem;
    }


}

